--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,11 @@
 2003-01-30  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* makefile:
+	(RT_STD): Add strm2.
+
+	* strm2.adb, strm2.out, error_strm.ads, error_strm.adb:
+	Initial revision.
+
 	* user_strm.adb:
 	(Read): Correctly convert a Stream_Element_Offset to a
 	 Stream_Element to avoid constraint error (detected with GNAT 3.16).
