--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_STD): Add tlog.
+
+	* tlog.adb, tlog.out:
+	Initial revision.
+
 2003-01-30  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
