--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,11 @@
 2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* aws-server.adb:
+	(Default_Unexpected_Exception_Handler): Add exception information
+	 to the internal 500 message.
+
+2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* aws-server-protocol_handler.adb:
 	Change again the exception handling circuitry. We now handle
 	 Net.Socket_Error and other exception differently as we want in
