--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* tlog.out:
+	Update output to new stable format.
+
+	* tlog.adb:
+	Removes date from filename to have a stable output.
+
 2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* unexph2.adb:
