--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,18 @@
+2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-server-protocol_handler.adb:
+	(Exception_String): Moved to AWS.Utils as CRLF_2_Spaces.
+	Use AWS.Utils.CRLF_2_Spaces instead of Exception_String.
+
+	* aws-server.adb:
+	(Line): Log data error as a single line.
+	Minor reformatting.
+	
+	* aws-utils.ads, aws-utils.adb:
+	(CRLF_2_Spaces): New routine (a similar routine was in
+	 Protocol_Handler)
+	Update copyright notice.
+
 2003-01-31  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-server.adb:
