--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(clean): Use rm -f to avoid warnings.
+
 2003-01-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
