--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* makefile:
+	(clean): Use rm -f to avoid warnings.
+
 	* aws-server-protocol_handler.adb:
 	(Exception_String): Moved to AWS.Utils as CRLF_2_Spaces.
 	Use AWS.Utils.CRLF_2_Spaces instead of Exception_String.
