--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,12 @@
+2003-02-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* tlog.out:
+	Update output.
+
+	* tlog.adb:
+	(IP): Removed.
+	(Parse_Log): Do not try to remove the ':' as it has been removed.
+
 2003-02-05  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
 	* makefile, sp.adb, sp.out, ssp.adb, ssp.out:
