--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(clean): Add aws-net-std.adb
+
 2003-02-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net.ads, aws-net-std.ads:
