--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-net-std-adasockets.adb:
+	Set in UNIX format.
+
 2003-02-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std-gnat.adb:
