--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-10  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-jabber.ads:
+	(Incoming_Stream): Add pragma Storage_Size. This task needs a
+	 stack bigger than the default as it use the XMLAda parser.
+
 2003-02-08  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
