--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-12  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
+	(Open_Send_Common_Header): Replace remaining Connection.Socket.all
+	 to the Sock.
+
 2003-02-10  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-status.adb:
