--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-12  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
+	(Connect): Fix typo in previous check-in.
+
 2003-02-12  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-client.adb:
