--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std-gnat.adb:
+	(Connect): Free and Close the socket in case of connection failure.
+	 same aws-net-std-adasockets.adb modification would be soon.
+
 2003-02-13  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-net-std-gnat.adb:
