--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2003-02-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
+	(Connect): Do not free and shutdown socket in case of
+	 connection failure, it should not be opened in case of failure.
+
+	* aws-net-ssl.adb:
+	(Connect): Close and shutdown the SSL socket in case of SSL initation
+	 error.
+
 2003-02-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server-protocol_handler.adb:
