--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-23  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* ssl-thin.ads:
+	Fix casing.
+
 2002-02-15  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
 	* ssl-wrappers.ads, ssl-wrappers.adb:
