--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,12 @@
+2003-02-25  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(OFLAGS): New variable.
+	Activate debug mode only if DEBUG is set.
+
+	* templates_parser.adb:
+	Update to version 4.6.
+
 2003-02-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std-adasockets.adb:
