--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-27  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.adb: 
+	Update to version 4.7. Bug fix.
+
 2003-02-25  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
