--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-02  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* hval.adb, hval.out:
+	Test for the Unnamed_Value_Exists routine.
+
 2003-02-10  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
