--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,22 @@
 2003-03-02  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* aws-services-dispatchers-method.adb:
+	Put with clauses in alphabetical order.
+	Update copyright notice.	
+
+	* aws-services-dispatchers-method.ads:
+	Put with clauses in alphabetical order.
+	Minor reformatting.
+	Update copyright notice.	
+
+	* aws-services-dispatchers-uri.adb:
+	Put with clauses in alphabetical order.
+	Update copyright notice.	
+
+	* aws-services-dispatchers-uri.ads:
+	Minor reformatting.
+	Update copyright notice.
+
 	* aws-communication-client.ads:
 	Minor reformatting.
 	Update copyright notice.	
