--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-03  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* hval.adb, hval.out:
+	Test for the empty Header_Value parameter.
+
 2003-03-02  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
 	* hval.adb, hval.out:
