--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-04  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws.ads:
+	(Version): Set to 1.3.
+
 2003-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-headers-values.adb:
