--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,13 @@
+2003-03-05  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(TOOLS): New variable. If XMLADA is defined add wsdl2aws tool.
+	(ALL_EXEC): New variable.
+	(clean): Use $(ALL_EXEC).
+
+	* wsdl2aws.adb:
+	Initial revision.
+
 2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
