--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2003-03-05  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser-input.adb:
+	Update to version 4.8. Memory leak fix when using a non existent
+	 template.
+
 2003-03-04  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-net-std-gnat.adb, aws-net-std-adasockets.adb:
