--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,8 +1,17 @@
+2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* tgdb:
+	Initial revision.
+	
+	* makefile:
+	Run more tests with gdb.
+	(clean): Remove *.tmp.
+
 2003-03-07  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
-	remove unnecessary output copy in GDB_REGTESTS mode.
-	change cat usage to cp.
+	Remove unnecessary output copy in GDB_REGTESTS mode.
+	Change cat usage to cp.
 
 2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>
 
