--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-07  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	add ./ before tgdb, becouse MSYS could not start just tgdb.
+
+	* tgdb:
+	use expr instead of bc utility, becouse MSYS do not have bc.
+
 2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* tgdb:
@@ -143,7 +151,7 @@
 
 2003-02-03  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
-	* makefile, dirop.adb, dirop,tmplt, dirop.out:
+	* makefile, dirop.adb, dirop.tmplt, dirop.out:
 	Regression test for directory browser.
 
 2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
