--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,10 +1,15 @@
+2003-03-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* test_speed.adb:
+	Compute time allowed to pass the test by checking computer speed.
+
 2003-03-07  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
-	add ./ before tgdb, becouse MSYS could not start just tgdb.
+	Add ./ before tgdb, becouse MSYS could not start just tgdb.
 
 	* tgdb:
-	use expr instead of bc utility, becouse MSYS do not have bc.
+	Use expr instead of bc utility, becouse MSYS do not have bc.
 
 2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>
 
