--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2003-03-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-generator.adb:
+	(Create): Use AWS.OS_Lib instead of GNAT.OS_Lib. Fix build failure
+	 with GNAT 3.15p.
+
 2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-generator-skel.adb:
